Version 3.2.0, Jan TODO, 2020

    * faster saxpy-based matrix multiply: removed Sauna workspace,
        Heap method removed (to be added back later)
    * added GB_BURBLE: for development diagnostics
    * faster typecast of the mask matrix M: GB_mcast replaces cast_M

Version 3.1.2, Dec 16, 2019

    * (15) bug fix in parallel matrix-matrix multiply: could occur when # of
        threads is larger than the # of columns of B, for C=A*B, and when
        B is a standard matrix with one or more empty vectors.
    * (14) bug fix for MATLAB interface: A(58) and A(:) were conflated.
    * compiler port: changes to allow GraphBLAS to be compiled with older
        compilers (pre ANSI C11), and Microsoft Visual Studio.

Version 3.1.1, Oct 21, 2019

    * minor edits: user guide and comments in code

Version 3.1.0, Oct 2, 2019

    * added MATLAB interface: GraphBLAS/GraphBLAS is new.  In Source/, added
        global pointer to printf for MATLAB mexPrintf, pointer to
        mexMakeMemoryPersistent for Sauna workspace.  Changed how GraphBLAS
        objects are printed with GxB_print.  Changed how duplicate indices are
        handled in assign and extract, to match the MATLAB stadard.  Added
        helper functions for MATLAB (GB_matlab_helper.[ch]).
        Code size: @GrB is 9.7KLOC, test/ is 4.5KLOC).
    * bug counter added to this ChangeLog: to count # of bugs that appeared
        in formal releases that affect production code.  The count excludes
        bug fixes for test code, bugs in the demo codes, bugs introduced
        in beta versions that were fixed before any formal release, and
        bugs prior to version 1.0.  Code size of Source/, Include/ excluding
        Source/Generated, and Config/*.m4, is 42,659 lines (not including the
        new MATLAB interface).  13 bugs / 42K lines is a bug rate of 0.3 bugs
        per KLOC, much lower than most commercial software, but higher than