@@ -11,7 +11,7 @@
 
 #include "GB.h"
 
-#define GB_CHUNK (1024*1024)
+#define GB_MEM_CHUNK (1024*1024)
 
 void GB_memcpy                  // parallel memcpy
 (
@@ -22,7 +22,7 @@ void GB_memcpy                  // parallel memcpy
 )
 {
 
-    if (nthreads <= 1 || n <= GB_CHUNK)
+    if (nthreads <= 1 || n <= GB_MEM_CHUNK)
     { 
 
         //----------------------------------------------------------------------
@@ -38,8 +38,8 @@ void GB_memcpy                  // parallel memcpy
         // memcpy using a multiple threads
         //----------------------------------------------------------------------
 
-        nthreads = GB_IMIN (nthreads, n / GB_CHUNK) ;
-        size_t nchunks = 1 + (n / GB_CHUNK) ;
+        nthreads = GB_IMIN (nthreads, n / GB_MEM_CHUNK) ;
+        size_t nchunks = 1 + (n / GB_MEM_CHUNK) ;
         GB_void *pdest = dest ;
         const GB_void *psrc = src ;
 
@@ -47,10 +47,10 @@ void GB_memcpy                  // parallel memcpy
         #pragma omp parallel for num_threads(nthreads) schedule(dynamic,1)
         for (k = 0 ; k < nchunks ; k++)
         {
-            size_t start = k * GB_CHUNK ;
+            size_t start = k * GB_MEM_CHUNK ;
             if (start < n)
             { 
-                size_t chunk = GB_IMIN (n - start, GB_CHUNK) ;
+                size_t chunk = GB_IMIN (n - start, GB_MEM_CHUNK) ;
                 memcpy (pdest + start, psrc + start, chunk) ;
             }
         }
