@@ -99,9 +99,9 @@ end
 fprintf ('\n') ;
 fprintf ('\n') ;
 
-% 680: x,y,z all nonboolean:  (8+6+3)*4*10
+% x,y,z all nonboolean
 n = 0 ;
-for mult = {'first', 'second', 'min', 'max', ...
+for mult = {'first', 'second', 'pair', 'min', 'max', ...
             'plus', 'minus', 'times', 'div',...
             'iseq', 'isne', 'isgt', 'islt', 'isge', 'isle', ...
             'lor', 'land', 'lxor', }
@@ -140,7 +140,7 @@ end
 % 40: x,y,z all boolean: 10 * 4
 fprintf ('\n') ;
 fprintf ('    // purely boolean semirings (in the form GrB_(add monoid)_(multipy operator)_BOOL:\n') ;
-for mult = { 'first', 'second', 'Lor', 'Land', 'Lxor', ...
+for mult = { 'first', 'second', 'pair', 'Lor', 'Land', 'Lxor', ...
              'eq', 'gt', 'lt', 'ge', 'le' }
     fmult = upper (mult {1}) ;
     fprintf ('    ') ;
@@ -168,7 +168,7 @@ fprintf ('    if (zcode != GB_BOOL_code)\n') ;
 fprintf ('    {\n') ;
 fprintf ('        switch (multcode)\n') ;
 fprintf ('        {\n') ;
-for mult = {'first', 'second', 'min', 'max', ...
+for mult = {'first', 'second', 'pair', 'min', 'max', ...
     'plus', 'minus', 'times', 'div',...
     'iseq', 'isne', 'isgt', 'islt', 'isge', 'isle', ...
     'lor', 'land', 'lxor', }
@@ -251,7 +251,7 @@ fprintf ('    else // purely boolean semirings\n') ;
 fprintf ('    {\n') ;
 fprintf ('        switch (multcode)\n') ;
 fprintf ('        {\n') ;
-for mult = { 'first', 'second', 'Lor', 'Land', 'Lxor', ...
+for mult = { 'first', 'second', 'pair', 'Lor', 'Land', 'Lxor', ...
              'eq', 'gt', 'lt', 'ge', 'le' }
     fmult = upper (mult {1}) ;
     fprintf ('\n') ;
