@@ -1,7 +1,7 @@
 function test31
 %TEST31 test GrB_transpose
 
-% SuiteSparse:GraphBLAS, Timothy A. Davis, (c) 2017-2019, All Rights Reserved.
+% SuiteSparse:GraphBLAS, Timothy A. Davis, (c) 2017-2020, All Rights Reserved.
 % http://suitesparse.com   See GraphBLAS/Doc/License.txt for license.
 
 fprintf ('\n------------------- simple tests of GB_mex_transpose\n') ;
@@ -40,14 +40,15 @@ C = GB_mex_transpose (Cin, [ ], 'plus', A, D) ;
 assert (isequal (C.matrix,Cin+A)) ;
 
 ops = {
-    'first',    0,
-    'second',   0,
-    'min',      1,
-    'max',      1,
-    'plus',     1,
-    'minus',    0,
-    'times',    1,
-    'div',      0 } ;
+    'first',
+    'second',
+    'pair',
+    'min',
+    'max',
+    'plus',
+    'minus',
+    'times',
+    'div',   } ;
 
 for k = 1:length(ops)
     op = ops {k} ;
