@@ -1,5 +1,7 @@
 Version 3.2.0, Jan TODO, 2020
 
+    * changed default chunk size: from 4K to 64K
+    * added the PAIR binary operator: f(x,y)=1
     * faster saxpy-based matrix multiply: removed Sauna workspace,
         Heap method removed (to be added back later)
     * added GB_BURBLE: for development diagnostics
